--- a/qna/templates/qna/create.html
+++ b/qna/templates/qna/create.html
@@ -18,26 +18,7 @@ window.onload = function () {
 {% block content %}
 <h2>New Question</h2>
 <form method="post" enctype="multipart/form-data">
-    <div>
-        {{ form.title.errors }}
-        <label for="id_title">Title:</label>
-        {{ form.title }}
-    </div>
-    <div>
-        {{ form.slug.errors }}
-        <label for="id_slug">Slug:</label>
-        {{ form.slug }}
-    </div>
-    <div>
-        {{ form.question.errors }}
-        <label for="id_question">Question:</label>
-        {{ form.question }}
-    </div>     
-    <div>
-        {{ form.allow_comments.errors }}
-        <label for="id_allow_comments">Allow Comments?</label>
-        {{ form.allow_comments }}
-    </div>     
+    {{ form.as_p }} 
     <input type="submit"/>
 </form>
 {% endblock %}
