--- a/qna/templates/qna/create_complete.html
+++ b/qna/templates/qna/create_complete.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'qna/base.html' %}
 
 {% block extra_head %}
 <script type="text/javascript" src="{{ MEDIA_URL }}fckeditor/fckeditor.js"></script>
